step31: correcting the collapse keys with overflow

--- a/Project011-BuildingPiano_Module03/styles.css
+++ b/Project011-BuildingPiano_Module03/styles.css
@@ -21,6 +21,7 @@ html{
     width: 949px;
     height: 180px;
     padding-left: 2px;
+    overflow: hidden; /*In the screen smaller than 768px, this property will hide any element that is pushed outside the set width value of .keys.*/
 }
 
 .key{
